correction internationalisation et fin série 9

--- a/src/java/ch/hearc/ig/odi/customeraccount/config/Message_en.properties
+++ b/src/java/ch/hearc/ig/odi/customeraccount/config/Message_en.properties
@@ -2,8 +2,6 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-titre_accueil=Bienvenue sur ma page
-titre_cli_list=Liste des clients
-titre_cli_edi=D\u00e9tails du client
-
-
+titre_accueil=Welcom on my page
+titre_cli_list=List of customers
+titre_cli_edi=Customer
